--- a/index.html
+++ b/index.html
@@ -1,125 +1,120 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AbidinAI - Generator Gambar</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AbidinAI Gambar</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #1a1a1a;
-      color: #fff;
       margin: 0;
-      padding: 0;
+      font-family: Arial, sans-serif;
+      background: #f0f0f0;
+      display: flex;
+      justify-content: center;
+      padding: 20px;
+    }
+
+    .container {
+      max-width: 600px;
+      width: 100%;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
       text-align: center;
     }
 
     h1 {
-      margin-top: 40px;
-      font-size: 2em;
-      color: #00ffc8;
+      color: #333;
+      margin-bottom: 20px;
     }
 
-    input[type="text"] {
-      width: 80%;
-      max-width: 400px;
-      padding: 12px;
-      margin: 20px auto;
-      border: none;
-      border-radius: 10px;
+    textarea {
+      width: 100%;
+      height: 100px;
       font-size: 16px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      resize: none;
+      margin-bottom: 15px;
     }
 
     button {
-      padding: 12px 25px;
-      background-color: #00ffc8;
-      color: #000;
-      border: none;
-      border-radius: 10px;
+      padding: 10px 20px;
       font-size: 16px;
+      background: #4caf50;
+      color: white;
+      border: none;
       cursor: pointer;
+      border-radius: 5px;
     }
 
     button:hover {
-      background-color: #00ccaa;
+      background: #45a049;
     }
 
-    .loader {
-      margin: 20px auto;
-      border: 5px solid #333;
-      border-top: 5px solid #00ffc8;
-      border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      animation: spin 1s linear infinite;
-      display: none;
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg);}
-      100% { transform: rotate(360deg);}
-    }
-
-    img {
+    .image-container {
       margin-top: 20px;
-      max-width: 90%;
+    }
+
+    .image-container img {
+      max-width: 100%;
       border-radius: 10px;
-      box-shadow: 0 0 10px #00ffc8;
+      margin-top: 10px;
+    }
+
+    .loading {
+      font-style: italic;
+      color: gray;
     }
   </style>
 </head>
 <body>
-  <h1>🎨 AbidinAI - Buat Gambar dari Teks</h1>
-
-  <input type="text" id="prompt" placeholder="Contoh: pemandangan malam cyberpunk" />
-  <br>
-  <button onclick="generateImage()">Generate</button>
-
-  <div class="loader" id="loading"></div>
-
-  <img id="result" alt="Hasil Gambar AI" />
+  <div class="container">
+    <h1>AbidinAI - Buat Gambar dari Teks</h1>
+    <textarea id="prompt" placeholder="Tulis deskripsi gambar, misalnya: kucing lucu di bulan..."></textarea>
+    <br />
+    <button onclick="generateImage()">Buat Gambar</button>
+    <div class="image-container" id="imageContainer">
+      <p class="loading">Gambar akan muncul di sini...</p>
+    </div>
+  </div>
 
   <script>
+    const HF_TOKEN = "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";
+
     async function generateImage() {
-      const prompt = document.getElementById('prompt').value.trim();
-      const resultImg = document.getElementById('result');
-      const loader = document.getElementById('loading');
+      const prompt = document.getElementById("prompt").value.trim();
+      const container = document.getElementById("imageContainer");
+      
+      if (!prompt) {
+        alert("Tolong isi prompt gambarnya dulu ya!");
+        return;
+      }
 
-      if (!prompt) return alert("Masukkan teks dulu!");
-
-      resultImg.style.display = 'none';
-      loader.style.display = 'block';
+      container.innerHTML = `<p class="loading">Sedang membuat gambar dari prompt: <b>${prompt}</b>...</p>`;
 
       try {
-        const response = await fetch("https://api.stability.ai/v1/generation/stable-diffusion-v1-5/text-to-image", {
+        const response = await fetch("https://api-inference.huggingface.co/models/stabilityai/stable-diffusion-2", {
           method: "POST",
           headers: {
-            "Content-Type": "application/json",
-            "Accept": "application/json",
-            "Authorization": "Bearer sk-ABEr93PRqgBBJt2nw9P0g8tyg4hP5E0C3xGe5Z3cX13BeeIn"
+            "Authorization": `Bearer ${HF_TOKEN}`,
+            "Content-Type": "application/json"
           },
-          body: JSON.stringify({
-            text_prompts: [{ text: prompt }],
-            cfg_scale: 8,
-            height: 512,
-            width: 512,
-            samples: 1,
-            steps: 30
-          })
+          body: JSON.stringify({ inputs: prompt })
         });
 
-        const data = await response.json();
-        if (data.artifacts && data.artifacts.length > 0) {
-          resultImg.src = "data:image/png;base64," + data.artifacts[0].base64;
-          resultImg.style.display = 'block';
-        } else {
-          alert("Gagal mendapatkan gambar!");
+        if (!response.ok) {
+          container.innerHTML = `<p class="loading">Gagal memuat gambar. Coba lagi nanti.</p>`;
+          return;
         }
+
+        const blob = await response.blob();
+        const imageUrl = URL.createObjectURL(blob);
+        container.innerHTML = `<img src="${imageUrl}" alt="Gambar AI">`;
       } catch (err) {
-        alert("Terjadi kesalahan saat mengambil gambar!");
-        console.error(err);
-      } finally {
-        loader.style.display = 'none';
+        container.innerHTML = `<p class="loading">Terjadi kesalahan: ${err.message}</p>`;
       }
     }
   </script>
